[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Ship/Room_Preview.png" type="Texture" id=1]
[ext_resource path="res://Scripts/RoomPreview.gd" type="Script" id=2]
[ext_resource path="res://Assets/Ship/Wall/Wall_001_BotA.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ship/Wall/Wall_001_SideA.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ship/Wall/Wall_001_TopA.png" type="Texture" id=5]
[ext_resource path="res://Assets/Ship/Floor/Floor_001.png" type="Texture" id=6]

[node name="RoomPreview" type="Node2D"]
script = ExtResource( 2 )

[node name="FloorSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="WallTop" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 5 )

[node name="WallBottom" type="Sprite" parent="."]
position = Vector2( 0, 56 )
texture = ExtResource( 3 )

[node name="WallLeft" type="Sprite" parent="."]
position = Vector2( -56, 0 )
texture = ExtResource( 4 )

[node name="WallRight" type="Sprite" parent="."]
position = Vector2( 56, 0 )
texture = ExtResource( 4 )

[node name="BlueOverlay" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Build" type="Button" parent="."]
margin_left = -23.098
margin_top = -9.76965
margin_right = 21.902
margin_bottom = 10.2303
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Build" to="." method="_on_Build_pressed"]
